<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WebMenuApp</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="what_is_my_software">&lt;b> Company &lt;/b></string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="desc_list_item_icon">Item icon</string>
    <string name="action_example">Example action</string>
    <string name="help">Help</string>
    <string name="action_settings">Settings</string>
	<string name="exitApp">Exit application</string>
	<string name="no_matches_found">Found 0 matches!!</string>
	<string name="settings">Settings</string>
	<string name="theme">Theme</string>
	<string name="theme_summary_desc">Modify theme settings</string>
    <string name="style">Style settings</string>
    <string name="style_summary">Change Style</string>
	<string name="about">About</string>
	<string name="about_summary">Software development idea</string>
    <string name="text_size">Text Size</string>
    <string name="text_size_summary">Change text size</string>
	<string name="img_description">Image original description</string>
	<string name="description_text">Description text</string>
    <string name="search_title">Search</string>
	<string name="search_icon"></string>
	<string name="facebook">Facebook</string>
	<string name="google">Google</string>
	<string name="feedback">Feedback</string>
	<string name="narrow">Narrow</string>
	<string name="news">News</string>
	<string name="yes">Yes</string>
	<string name="search">Search</string>
    <string name="cancel"></string>
	<string name="no">No</string>
	<string name="web_item">Web View</string>
	<string name="web">Web</string>
    <string name="login_screen">LoginScreen</string>
    <string name="hello_world">Login Screen</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Login">Login:</string>
    <string name="attempts">Attempts Left:</string>
    <string name="speech">Speech</string>
    <string name="fast_input_settings">Fast input settings</string>
    <string name="fast_input_label">Input label</string>
    <string name="display_name_english_keyboard_ime">English keyboard</string>
    <string name="menu_1">Hello, %1$s! You have &lt;b>%2$d new messages&lt;/b>.s</string>
    <string name="company_title_view">&lt;b> Company profile view &lt;/b></string>
    <string name="preferences_search_dialog"></string>

    <!-- Title for Latin keyboard -->
    <string name="ime_name">Sample Soft Keyboard</string>
    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    <!-- Labels on soft keys -->
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_send_key">Send</string>
    <!-- Labels for subtype -->
    <string name="label_subtype_generic">%s</string>
    <string name="label_subtype_en_GB">English (GB)</string>
    <!-- Titles for ImePreference -->
    <string name="settings_name">Sample Soft Keyboard Settings</string>
    <string name="language_selection_title">Input languages</string>
    <string name="select_language">Select input languages</string>
    <string name="general_category">General</string>
    <string name="loading">loading</string>
    <string name="search_keyboard">Keyboard with search</string>
</resources>
