<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="org.webmenu.level11.LeftMenu">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="50"
        android:icon="@drawable/more_info_page_1"
        android:menuCategory="secondary"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/theme_settings"
                android:title="@string/settings"
                android:showAsAction="never"
                android:icon="@drawable/start_settings" />
            <item
                android:id="@+id/closeApplication"
                android:title="@string/exitApp"
                android:showAsAction="never"
                android:icon="@drawable/exit_item_2" />
        </menu>
    </item>
</menu>
